--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
+
+
+header {
+    background-color: rgb(49, 109, 109);
+
+    .navbar-toggler:focus {
+        box-shadow: none;
+    }
+}
