[UPD] ok view create e rotta

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -22,4 +22,8 @@ header {
     width: calc(100vw - 100px);
     height: calc(100vh - 100px);
     overflow-y: auto;
+
+    .textarea-sm {
+        height: 100px;
+    }
 }
